--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@radix-ui/react-dropdown-menu": "^2.1.11",
         "@radix-ui/react-select": "^2.2.2",
+        "@radix-ui/react-separator": "^1.1.4",
         "@radix-ui/react-slot": "^1.2.0",
         "@tailwindcss/postcss": "^4.1.4",
         "@tanstack/react-table": "^8.21.3",
