--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@tanstack/react-table": "^8.21.3",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "ethers": "^6.13.5",
         "lucide-react": "^0.501.0",
         "next": "15.3.1",
         "postcss": "^8.5.3",
