--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@radix-ui/react-dialog": "^1.1.11",
         "@radix-ui/react-dropdown-menu": "^2.1.12",
         "@radix-ui/react-label": "^2.1.4",
+        "@radix-ui/react-popover": "^1.1.11",
         "@radix-ui/react-select": "^2.2.2",
         "@radix-ui/react-separator": "^1.1.4",
         "@radix-ui/react-slot": "^1.2.0",
@@ -19,11 +20,13 @@
         "@tanstack/react-table": "^8.21.3",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "date-fns": "^3.6.0",
         "ethers": "^6.13.5",
         "lucide-react": "^0.501.0",
         "next": "15.3.1",
         "postcss": "^8.5.3",
         "react": "^19.0.0",
+        "react-day-picker": "^8.10.1",
         "react-dom": "^19.0.0",
         "react-icons": "^5.5.0",
         "react-text-truncate": "^0.19.0",
