--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
         "ethers": "^6.13.5",
         "lucide-react": "^0.501.0",
         "next": "15.3.1",
+        "next-themes": "^0.4.6",
         "postcss": "^8.5.3",
         "react": "^19.0.0",
         "react-day-picker": "^8.10.1",
         "react-dom": "^19.0.0",
         "react-icons": "^5.5.0",
         "react-text-truncate": "^0.19.0",
+        "sonner": "^2.0.3",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.4",
         "tw-animate-css": "^1.2.7"
