--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@hookform/resolvers": "^5.0.1",
         "@radix-ui/react-dialog": "^1.1.11",
         "@radix-ui/react-dropdown-menu": "^2.1.12",
         "@radix-ui/react-label": "^2.1.4",
@@ -29,12 +30,14 @@
         "react": "^19.0.0",
         "react-day-picker": "^8.10.1",
         "react-dom": "^19.0.0",
+        "react-hook-form": "^7.56.1",
         "react-icons": "^5.5.0",
         "react-text-truncate": "^0.19.0",
         "sonner": "^2.0.3",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.4",
-        "tw-animate-css": "^1.2.7"
+        "tw-animate-css": "^1.2.7",
+        "zod": "^3.24.3"
     },
     "devDependencies": {
         "@types/node": "^20",
