--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@radix-ui/react-select": "^2.2.2",
         "@radix-ui/react-separator": "^1.1.4",
         "@radix-ui/react-slot": "^1.2.0",
+        "@supabase/supabase-js": "^2.49.4",
         "@tailwindcss/postcss": "^4.1.4",
         "@tanstack/react-table": "^8.21.3",
         "class-variance-authority": "^0.7.1",
